[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
ds = { path = "./src/ds" }

# 0.10以上版本不支持 actix-web-actors 3.0 
actix = "0.12.0"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.7"
actix-redis = "0.10.0-beta.2"

mongodb = "2.0.0"


