[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
# 时间库
chrono = "0.4.19"
urlencoding = "2.1.0"
querystring = "1.1.0"
lazy_static = "1.4.0"
serde = "1.0.130"
